[package]
name = "javy"
version = "0.1.0"
authors = ["Saúl Cabrera <saulecabrera@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
quickjs-sys = { path = "../quickjs-sys" }

[dev-dependencies]
criterion = "0.3"
# wasi-common = "0.26.1"
# wasmtime = "0.26.0"
# wasmtime-wasi = "0.26.0"
lucetc = { git = "https://github.com/bytecodealliance/lucet", branch = "main" }
lucet-runtime = { git = "https://github.com/bytecodealliance/lucet", branch = "main" }
lucet-wasi = { git = "https://github.com/bytecodealliance/lucet", branch = "main" }
tokio = { version = "1.5.0" }

# [[bench]]
# name = "wasmtime"
# harness = false

[[bench]]
name = "lucet"
harness = false

[features]
wizer = []

[profile.release]
lto = true
