[package]
name = "javy"
version = "0.5.0"
authors = ["Saúl Cabrera <saulecabrera@gmail.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "javy"

[dependencies]
wizer = { git = "https://github.com/bytecodealliance/wizer", branch = "main" }
which = "4.2"
structopt = "0.3"
anyhow = "1.0"
tempfile = "3.2.0"
binaryen = "0.12.1"

[dev-dependencies]
wasmtime = "0.35.3"
wasmtime-wasi = "0.35.3"
rmp-serde = "0.15"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }

